--- a/wiki/it/Macro_Snip.html
+++ b/wiki/it/Macro_Snip.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Bildschirmfoto (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Snip.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Snip (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Snip (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Wycinek (4% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--low" title="Macro de Corte (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; Snip (&#1054;&#1073;&#1088;&#1077;&#1079;&#1072;&#1090;&#1100;) (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -133,10 +133,8 @@ Su Linux: gnone-screenshot utility<br>
 <p>The <code>ScaleFactor</code> parameter scales the image to the desired ratio, e.g. 0.5. The default is 1.0, in which case no scaling is done. This overrides the DesiredWidth parameter if ScaleFactor is not 1.0.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>You can bypass all scaling by holding down the Ctrl key while clicking the Ok button to take the screen shot.
+<p>&Egrave; possibile ignorare tutti i ridimensionamenti tenendo premuto il tasto Ctrl mentre si fa clic sul pulsante Ok per acquisire lo screenshot.
 </p>
-</div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>Icona della barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Snip.png&amp;filetimestamp=20190803232007&amp;.html" class="mw-file-description"><img src="../File/Snip.png" decoding="async" width="44" height="42" class="mw-file-element" data-file-width="44" data-file-height="42"></a></span>
 </p><p><b>Macro_Snip.FCMacro</b>
@@ -547,34 +545,34 @@ if not userCanceled:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122144815
+Cached time: 20260122144911
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.056 seconds
-Real time usage: 0.083 seconds
-Preprocessor visited node count: 289/1000000
+CPU time usage: 0.059 seconds
+Real time usage: 0.100 seconds
+Preprocessor visited node count: 288/1000000
 Post&#8208;expand include size: 8696/2097152 bytes
 Template argument size: 19098/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 18824/5000000 bytes
+Unstrip post&#8208;expand size: 18825/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.289      1 -total
- 18.68%    3.604      1 Template:Macro/it
- 15.18%    2.929      2 Template:Caption
- 11.56%    2.229      3 Template:Button
- 11.15%    2.151      7 Template:KEY
-  9.81%    1.891     13 Template:Incode
-  9.46%    1.824      1 Template:FileName
-  7.76%    1.497      1 Template:MacroCode
-  7.56%    1.458      1 Template:MenuCommand
+100.00%   25.820      1 -total
+ 17.46%    4.507      7 Template:KEY
+ 16.43%    4.243      1 Template:Macro/it
+ 11.60%    2.996      1 Template:FileName
+ 11.46%    2.959     13 Template:Incode
+ 11.04%    2.851      1 Template:MenuCommand
+  8.97%    2.315      3 Template:Button
+  8.46%    2.184      1 Template:MacroCode
+  8.26%    2.133      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20260122144815 and revision id 1742418. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20260122144910 and revision id 1742420. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
