--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -74,9 +74,9 @@
 </p>
 </td></tr>
 <tr>
-<td><b>Unified tool for automatic horizontal/vertical constraints</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
+<td><b>Automatick&yacute; n&aacute;stroj pro Vodorovn&#283;/Svisle</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </td>
-<td>If checked, the <a href="../Sketcher_ConstrainHorVer.html" title="Sketcher ConstrainHorVer">automatic horizontal/vertical constraint tool</a> is added to the toolbar (it is always available in the menu and through its shortcut), and the <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">horizontal constraint tool</a> and <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">vertical constraint tool</a> are grouped below it in a dropdown.
+<td>Pokud je za&scaron;krtnuto, p&#345;id&aacute; se na panel n&aacute;stroj&#367; <a href="../Sketcher_ConstrainHorVer.html" title="Sketcher ConstrainHorVer">automatick&yacute; n&aacute;stroj pro vazbu vodorovn&eacute;ho/svisl&eacute;ho sm&#283;ru</a> (je v&#382;dy k dispozici v menu a prost&#345;ednictv&iacute;m kl&aacute;vesov&eacute; zkratky) a <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">n&aacute;stroj pro vazbu vodorovn&eacute;ho sm&#283;ru</a> a <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">n&aacute;stroj pro vazbu svisl&eacute;ho sm&#283;ru</a> se seskup&iacute; pod n&iacute;m v rozbalovac&iacute;m seznamu.
 <p><i>After changing this preference you must restart FreeCAD.</i>
 </p>
 </td></tr>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122144510
+Cached time: 20260122144923
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.142 seconds
-Real time usage: 0.371 seconds
+CPU time usage: 0.149 seconds
+Real time usage: 0.308 seconds
 Preprocessor visited node count: 1227/1000000
-Post&#8208;expand include size: 30012/2097152 bytes
-Template argument size: 11648/2097152 bytes
+Post&#8208;expand include size: 29997/2097152 bytes
+Template argument size: 11633/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  105.507      1 -total
- 17.90%   18.885      1 Template:Sketcher_Tools_navi/cs
- 10.09%   10.643      3 Template:PropertyView
-  9.69%   10.220      2 Template:Navigation_menu_2
-  8.72%    9.196      1 Template:Userdocnavi/cs
-  8.67%    9.144      1 Template:TOCright
-  6.76%    7.136      1 Template:Value
-  6.15%    6.492     96 Template:MenuCommand
-  5.84%    6.163      4 Template:Emphasis
-  5.57%    5.873      2 Template:Docnav
+100.00%   85.245      1 -total
+ 15.28%   13.022      1 Template:Sketcher_Tools_navi/cs
+ 10.56%    8.999      3 Template:PropertyView
+  9.60%    8.180      1 Template:Userdocnavi/cs
+  8.66%    7.378      1 Template:Value
+  7.94%    6.769      4 Template:Emphasis
+  7.15%    6.096      2 Template:Navigation_menu_2
+  6.42%    5.472     96 Template:MenuCommand
+  6.42%    5.469     19 Template:Version
+  5.71%    4.865      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122144510 and revision id 1742410. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122144923 and revision id 1742422. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
