--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -77,7 +77,7 @@
 <td><b>Automatick&yacute; n&aacute;stroj pro Vodorovn&#283;/Svisle</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </td>
 <td>Pokud je za&scaron;krtnuto, p&#345;id&aacute; se na panel n&aacute;stroj&#367; <a href="../Sketcher_ConstrainHorVer.html" title="Sketcher ConstrainHorVer">automatick&yacute; n&aacute;stroj pro vazbu vodorovn&eacute;ho/svisl&eacute;ho sm&#283;ru</a> (je v&#382;dy k dispozici v menu a prost&#345;ednictv&iacute;m kl&aacute;vesov&eacute; zkratky) a <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">n&aacute;stroj pro vazbu vodorovn&eacute;ho sm&#283;ru</a> a <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">n&aacute;stroj pro vazbu svisl&eacute;ho sm&#283;ru</a> se seskup&iacute; pod n&iacute;m v rozbalovac&iacute;m seznamu.
-<p><i>After changing this preference you must restart FreeCAD.</i>
+<p><i>Po zm&#283;n&#283; tohoto nastaven&iacute; mus&iacute;te FreeCAD restartovat.</i>
 </p>
 </td></tr>
 <tr>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122144923
+Cached time: 20260122145032
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.149 seconds
-Real time usage: 0.308 seconds
+CPU time usage: 0.130 seconds
+Real time usage: 0.201 seconds
 Preprocessor visited node count: 1227/1000000
-Post&#8208;expand include size: 29997/2097152 bytes
-Template argument size: 11633/2097152 bytes
+Post&#8208;expand include size: 29998/2097152 bytes
+Template argument size: 11634/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   85.245      1 -total
- 15.28%   13.022      1 Template:Sketcher_Tools_navi/cs
- 10.56%    8.999      3 Template:PropertyView
-  9.60%    8.180      1 Template:Userdocnavi/cs
-  8.66%    7.378      1 Template:Value
-  7.94%    6.769      4 Template:Emphasis
-  7.15%    6.096      2 Template:Navigation_menu_2
-  6.42%    5.472     96 Template:MenuCommand
-  6.42%    5.469     19 Template:Version
-  5.71%    4.865      3 Template:Variable
+100.00%   43.713      1 -total
+ 22.13%    9.674      1 Template:Sketcher_Tools_navi/cs
+ 13.34%    5.832      2 Template:Navigation_menu_2
+ 11.50%    5.026      1 Template:Userdocnavi/cs
+  8.90%    3.892      3 Template:PropertyView
+  8.55%    3.739     96 Template:MenuCommand
+  8.34%    3.646      1 Template:Value
+  4.74%    2.073      2 Template:Docnav
+  4.17%    1.822      3 Template:Variable
+  3.96%    1.730      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122144923 and revision id 1742422. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122145032 and revision id 1742424. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
