--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -81,9 +81,9 @@
 </p>
 </td></tr>
 <tr>
-<td><b>Group the polyline and line commands</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
+<td><b>Seskupit p&#345;&iacute;kaz lomen&eacute; &#269;&aacute;ry a &uacute;se&#269;ky</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </td>
-<td>If checked, a command group button that contains both the <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">polyline</a> and <a href="../Sketcher_CreateLine.html" title="Sketcher CreateLine">line</a> commands is shown. Otherwise, each command has its own separate button.
+<td>Pokud je za&scaron;krtnuto, zobraz&iacute; se tla&#269;&iacute;tko skupiny p&#345;&iacute;kaz&#367;, kter&eacute; obsahuje p&#345;&iacute;kazy <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">lomen&aacute; &#269;&aacute;ra</a> a <a href="../Sketcher_CreateLine.html" title="Sketcher CreateLine">&uacute;se&#269;ka</a>. V opa&#269;n&eacute;m p&#345;&iacute;pad&#283; m&aacute; ka&#382;d&yacute; p&#345;&iacute;kaz sv&eacute; vlastn&iacute; samostatn&eacute; tla&#269;&iacute;tko.
 <p><i>After changing this preference you must restart FreeCAD.</i>
 </p>
 </td></tr>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122145032
+Cached time: 20260122145305
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.201 seconds
+CPU time usage: 0.154 seconds
+Real time usage: 0.249 seconds
 Preprocessor visited node count: 1227/1000000
-Post&#8208;expand include size: 29998/2097152 bytes
-Template argument size: 11634/2097152 bytes
+Post&#8208;expand include size: 30005/2097152 bytes
+Template argument size: 11641/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.713      1 -total
- 22.13%    9.674      1 Template:Sketcher_Tools_navi/cs
- 13.34%    5.832      2 Template:Navigation_menu_2
- 11.50%    5.026      1 Template:Userdocnavi/cs
-  8.90%    3.892      3 Template:PropertyView
-  8.55%    3.739     96 Template:MenuCommand
-  8.34%    3.646      1 Template:Value
-  4.74%    2.073      2 Template:Docnav
-  4.17%    1.822      3 Template:Variable
-  3.96%    1.730      1 Template:Button
+100.00%   65.087      1 -total
+ 19.48%   12.676      1 Template:Sketcher_Tools_navi/cs
+ 10.98%    7.147      3 Template:PropertyView
+  9.05%    5.889     96 Template:MenuCommand
+  8.76%    5.699      2 Template:Navigation_menu_2
+  8.15%    5.303      1 Template:Value
+  7.45%    4.848      1 Template:Userdocnavi/cs
+  5.61%    3.651      3 Template:Variable
+  5.09%    3.311      1 Template:VersionMinus
+  4.77%    3.107      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122145032 and revision id 1742424. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122145305 and revision id 1742426. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
