--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -84,7 +84,7 @@
 <td><b>Seskupit p&#345;&iacute;kaz lomen&eacute; &#269;&aacute;ry a &uacute;se&#269;ky</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </td>
 <td>Pokud je za&scaron;krtnuto, zobraz&iacute; se tla&#269;&iacute;tko skupiny p&#345;&iacute;kaz&#367;, kter&eacute; obsahuje p&#345;&iacute;kazy <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">lomen&aacute; &#269;&aacute;ra</a> a <a href="../Sketcher_CreateLine.html" title="Sketcher CreateLine">&uacute;se&#269;ka</a>. V opa&#269;n&eacute;m p&#345;&iacute;pad&#283; m&aacute; ka&#382;d&yacute; p&#345;&iacute;kaz sv&eacute; vlastn&iacute; samostatn&eacute; tla&#269;&iacute;tko.
-<p><i>After changing this preference you must restart FreeCAD.</i>
+<p><i>Po zm&#283;n&#283; tohoto nastaven&iacute; mus&iacute;te FreeCAD restartovat.</i>
 </p>
 </td></tr>
 <tr>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122145305
+Cached time: 20260122145324
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.154 seconds
-Real time usage: 0.249 seconds
+CPU time usage: 0.149 seconds
+Real time usage: 0.194 seconds
 Preprocessor visited node count: 1227/1000000
-Post&#8208;expand include size: 30005/2097152 bytes
-Template argument size: 11641/2097152 bytes
+Post&#8208;expand include size: 30006/2097152 bytes
+Template argument size: 11642/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.087      1 -total
- 19.48%   12.676      1 Template:Sketcher_Tools_navi/cs
- 10.98%    7.147      3 Template:PropertyView
-  9.05%    5.889     96 Template:MenuCommand
-  8.76%    5.699      2 Template:Navigation_menu_2
-  8.15%    5.303      1 Template:Value
-  7.45%    4.848      1 Template:Userdocnavi/cs
-  5.61%    3.651      3 Template:Variable
-  5.09%    3.311      1 Template:VersionMinus
-  4.77%    3.107      2 Template:Docnav
+100.00%   45.242      1 -total
+ 19.23%    8.699      1 Template:Sketcher_Tools_navi/cs
+ 11.40%    5.158      2 Template:Navigation_menu_2
+ 10.24%    4.631      1 Template:Userdocnavi/cs
+  9.23%    4.174      1 Template:Value
+  9.17%    4.148      3 Template:PropertyView
+  8.12%    3.672     96 Template:MenuCommand
+  5.72%    2.589      2 Template:Docnav
+  5.08%    2.299      2 Template:Caption
+  5.07%    2.296      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122145305 and revision id 1742426. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122145324 and revision id 1742428. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
