--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -88,9 +88,9 @@
 </p>
 </td></tr>
 <tr>
-<td><b>Always add external geometry as construction</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
+<td><b>V&#382;dy prid&aacute;vat extern&iacute; geometrii jako konstrukci</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </td>
-<td>If checked, <a href="../Sketcher_External.html" title="Sketcher External">external geometry</a> is always added as construction geometry regardless of the current <a href="../Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">construction mode</a>.
+<td>Pokud je za&scaron;krtnuto, <a href="../Sketcher_External.html" title="Sketcher External">extern&iacute; geometrie</a> je v&#382;dy p&#345;id&aacute;na jako konstruk&#269;n&iacute; geometrie bez ohledu na aktu&aacute;ln&iacute; <a href="../Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">konstruk&#269;n&iacute; re&#382;im</a>.
 </td></tr>
 <tr>
 <td><b>Generate internal faces</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122145324
+Cached time: 20260122145959
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.149 seconds
-Real time usage: 0.194 seconds
+CPU time usage: 0.177 seconds
+Real time usage: 0.314 seconds
 Preprocessor visited node count: 1227/1000000
-Post&#8208;expand include size: 30006/2097152 bytes
-Template argument size: 11642/2097152 bytes
+Post&#8208;expand include size: 30012/2097152 bytes
+Template argument size: 11648/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.242      1 -total
- 19.23%    8.699      1 Template:Sketcher_Tools_navi/cs
- 11.40%    5.158      2 Template:Navigation_menu_2
- 10.24%    4.631      1 Template:Userdocnavi/cs
-  9.23%    4.174      1 Template:Value
-  9.17%    4.148      3 Template:PropertyView
-  8.12%    3.672     96 Template:MenuCommand
-  5.72%    2.589      2 Template:Docnav
-  5.08%    2.299      2 Template:Caption
-  5.07%    2.296      3 Template:Variable
+100.00%  111.179      1 -total
+ 13.42%   14.915      2 Template:Docnav
+ 13.37%   14.870      1 Template:Sketcher_Tools_navi/cs
+  9.96%   11.076     19 Template:Version
+  8.51%    9.460      1 Template:Userdocnavi/cs
+  7.79%    8.659      2 Template:Caption
+  6.50%    7.229      3 Template:KEY
+  6.29%    6.988      1 Template:TOCright
+  6.15%    6.841     96 Template:MenuCommand
+  5.90%    6.561      3 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122145324 and revision id 1742428. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122145958 and revision id 1742430. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
