--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -93,9 +93,9 @@
 <td>Pokud je za&scaron;krtnuto, <a href="../Sketcher_External.html" title="Sketcher External">extern&iacute; geometrie</a> je v&#382;dy p&#345;id&aacute;na jako konstruk&#269;n&iacute; geometrie bez ohledu na aktu&aacute;ln&iacute; <a href="../Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">konstruk&#269;n&iacute; re&#382;im</a>.
 </td></tr>
 <tr>
-<td><b>Generate internal faces</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
+<td><b>Generovat vnit&#345;n&iacute; plochy</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </td>
-<td>If checked, closed loops will automatically generate internal faces which are selectable to be used with other tools.
+<td>Pokud je tato mo&#382;nost za&scaron;krtnuta, uzav&#345;en&eacute; smy&#269;ky automaticky vygeneruj&iacute; vnit&#345;n&iacute; plochy, kter&eacute; lze vybrat pro pou&#382;it&iacute; s jin&yacute;mi n&aacute;stroji.
 </td></tr>
 <tr>
 <td><b>Dimensioning constraints</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122145959
+Cached time: 20260122150055
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.177 seconds
-Real time usage: 0.314 seconds
+CPU time usage: 0.136 seconds
+Real time usage: 0.187 seconds
 Preprocessor visited node count: 1227/1000000
-Post&#8208;expand include size: 30012/2097152 bytes
-Template argument size: 11648/2097152 bytes
+Post&#8208;expand include size: 30015/2097152 bytes
+Template argument size: 11651/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  111.179      1 -total
- 13.42%   14.915      2 Template:Docnav
- 13.37%   14.870      1 Template:Sketcher_Tools_navi/cs
-  9.96%   11.076     19 Template:Version
-  8.51%    9.460      1 Template:Userdocnavi/cs
-  7.79%    8.659      2 Template:Caption
-  6.50%    7.229      3 Template:KEY
-  6.29%    6.988      1 Template:TOCright
-  6.15%    6.841     96 Template:MenuCommand
-  5.90%    6.561      3 Template:PropertyView
+100.00%   48.193      1 -total
+ 16.37%    7.891      1 Template:Sketcher_Tools_navi/cs
+ 13.71%    6.609      3 Template:PropertyView
+ 10.74%    5.178      1 Template:Userdocnavi/cs
+  9.79%    4.716      2 Template:Navigation_menu_2
+  7.91%    3.813     96 Template:MenuCommand
+  7.52%    3.623      1 Template:Value
+  6.73%    3.244      3 Template:Variable
+  4.78%    2.305      4 Template:Emphasis
+  4.38%    2.112      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122145958 and revision id 1742430. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122150055 and revision id 1742432. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
