--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -98,12 +98,12 @@
 <td>Pokud je tato mo&#382;nost za&scaron;krtnuta, uzav&#345;en&eacute; smy&#269;ky automaticky vygeneruj&iacute; vnit&#345;n&iacute; plochy, kter&eacute; lze vybrat pro pou&#382;it&iacute; s jin&yacute;mi n&aacute;stroji.
 </td></tr>
 <tr>
-<td><b>Dimensioning constraints</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
+<td><b>Vazben&iacute; rozm&#283;ru</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </td>
-<td>Specifies the dimensional constraint tools for the toolbar (all dimensional tools are always available in the menu and through their shortcuts). The options are:
-<ul><li><b>Single tool</b>: A combined <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">Dimension tool</a> for all dimensional constraints. The separate tools are grouped below it in a dropdown.</li>
-<li><b>Separated tools</b>: Only the separate tools.</li>
-<li><b>Both</b>: Both the combined <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">Dimension tool</a> and the separated tools.</li></ul>
+<td>Specifikuje n&aacute;stroje pro vazby rozm&#283;r&#367; pro panel n&aacute;stroj&#367; (v&scaron;echny n&aacute;stroje pro rozm&#283;ry jsou v&#382;dy k dispozici v menu a prost&#345;ednictv&iacute;m jejich zkratek). Mo&#382;nosti jsou:
+<ul><li><b>Jedin&yacute; n&aacute;stroj</b>: Slou&#269;en&yacute; <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">n&aacute;stroj Rozm&#283;ru</a> pro v&scaron;echny rozm&#283;rov&eacute; vazby. Samostatn&eacute; n&aacute;stroje jsou seskupeny pod n&iacute;m v rozbalovac&iacute; nab&iacute;dce.</li>
+<li><b>Odd&#283;len&eacute; n&aacute;stroje</b>: Pouze samostatn&eacute; n&aacute;stroje.</li>
+<li><b>Oboje</b>: Jak kombinovan&yacute; <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">n&aacute;stroj rozm&#283;ru</a>, tak i samostatn&eacute; n&aacute;stroje.</li></ul>
 <p><i>After changing this preference you must restart FreeCAD.</i>
 </p>
 </td></tr>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122150055
+Cached time: 20260122150809
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.136 seconds
-Real time usage: 0.187 seconds
+CPU time usage: 0.141 seconds
+Real time usage: 0.192 seconds
 Preprocessor visited node count: 1227/1000000
-Post&#8208;expand include size: 30015/2097152 bytes
-Template argument size: 11651/2097152 bytes
+Post&#8208;expand include size: 30019/2097152 bytes
+Template argument size: 11655/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.193      1 -total
- 16.37%    7.891      1 Template:Sketcher_Tools_navi/cs
- 13.71%    6.609      3 Template:PropertyView
- 10.74%    5.178      1 Template:Userdocnavi/cs
-  9.79%    4.716      2 Template:Navigation_menu_2
-  7.91%    3.813     96 Template:MenuCommand
-  7.52%    3.623      1 Template:Value
-  6.73%    3.244      3 Template:Variable
-  4.78%    2.305      4 Template:Emphasis
-  4.38%    2.112      2 Template:Docnav
+100.00%   50.789      1 -total
+ 18.97%    9.637      1 Template:Sketcher_Tools_navi/cs
+ 11.32%    5.747      3 Template:PropertyView
+ 10.34%    5.251      2 Template:Navigation_menu_2
+  9.60%    4.874      1 Template:Userdocnavi/cs
+  8.70%    4.417     96 Template:MenuCommand
+  6.83%    3.467      3 Template:Variable
+  6.72%    3.414      1 Template:Value
+  5.43%    2.757      2 Template:Docnav
+  4.47%    2.269      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122150055 and revision id 1742432. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122150808 and revision id 1742434. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
