--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -104,7 +104,7 @@
 <ul><li><b>Jedin&yacute; n&aacute;stroj</b>: Slou&#269;en&yacute; <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">n&aacute;stroj Rozm&#283;ru</a> pro v&scaron;echny rozm&#283;rov&eacute; vazby. Samostatn&eacute; n&aacute;stroje jsou seskupeny pod n&iacute;m v rozbalovac&iacute; nab&iacute;dce.</li>
 <li><b>Odd&#283;len&eacute; n&aacute;stroje</b>: Pouze samostatn&eacute; n&aacute;stroje.</li>
 <li><b>Oboje</b>: Jak kombinovan&yacute; <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">n&aacute;stroj rozm&#283;ru</a>, tak i samostatn&eacute; n&aacute;stroje.</li></ul>
-<p><i>After changing this preference you must restart FreeCAD.</i>
+<p><a href="../index.php?title=Template;After_changing_this_preference_you_must_restart_FreeCAD.&amp;action=edit&amp;redlink=1.html" class="new" title="Template:After changing this preference you must restart FreeCAD. (page does not exist)">Template:After changing this preference you must restart FreeCAD.</a>
 </p>
 </td></tr>
 <tr>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122150809
+Cached time: 20260122150843
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.141 seconds
-Real time usage: 0.192 seconds
-Preprocessor visited node count: 1227/1000000
-Post&#8208;expand include size: 30019/2097152 bytes
-Template argument size: 11655/2097152 bytes
+CPU time usage: 0.124 seconds
+Real time usage: 0.205 seconds
+Preprocessor visited node count: 1224/1000000
+Post&#8208;expand include size: 30029/2097152 bytes
+Template argument size: 11599/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.789      1 -total
- 18.97%    9.637      1 Template:Sketcher_Tools_navi/cs
- 11.32%    5.747      3 Template:PropertyView
- 10.34%    5.251      2 Template:Navigation_menu_2
-  9.60%    4.874      1 Template:Userdocnavi/cs
-  8.70%    4.417     96 Template:MenuCommand
-  6.83%    3.467      3 Template:Variable
-  6.72%    3.414      1 Template:Value
-  5.43%    2.757      2 Template:Docnav
-  4.47%    2.269      1 Template:Button
+100.00%   52.477      1 -total
+ 15.61%    8.193      1 Template:Sketcher_Tools_navi/cs
+ 14.74%    7.735      3 Template:KEY
+ 10.58%    5.550      3 Template:PropertyView
+  9.18%    4.816      1 Template:Userdocnavi/cs
+  8.51%    4.468      2 Template:Navigation_menu_2
+  6.74%    3.536     96 Template:MenuCommand
+  6.11%    3.206      3 Template:Variable
+  5.35%    2.807      1 Template:VersionMinus
+  4.63%    2.431      1 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122150808 and revision id 1742434. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122150842 and revision id 1742436. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
